--- a/templates/template.css
+++ b/templates/template.css
@@ -1,19 +1,24 @@
-@import url('//fonts.googleapis.com/css?family=Source+Serif+Pro|Josefin+Sans');
-
 body {
-  background: #fff;
+  font-family: 'Droid Serif', serif;
+  font-size: 3vw;
+  color: #2f2f2f;
+  background-color: #f9f7f1;
+  font-family: 'Playfair Display', serif;
   margin: 0 0;
   overflow: hidden;
   color: #444;
-  font: 3.6vw/1.2 'Source Serif Pro', serif;
 }
 
+
 h1 {
-  margin: 1vw 0;
+  font-weight: 900;
+  font-size: 8vw;
+  text-transform: uppercase;
+  display: inline-block;
+  line-height: 1.5;
+  margin: 1vw 0 2vw;
   padding: 0;
   color: #666;
-  font-size: 6vw;
-  font-family: 'Josefin Sans', sans-serif;
   width: 100%;
   text-align: center;
 }
