--- a/templates/template.css
+++ b/templates/template.css
@@ -33,7 +33,7 @@ img {
 }
 
 a {
-  color: #0077ff;
+  color: #0a4;
   outline: 0 none;
   text-decoration: none;
   text-rendering: optimizelegibility;
@@ -43,11 +43,11 @@ a:focus,
 a:active,
 a:hover {
   outline: 0 none;
-  text-shadow: 0 0 2px #0cf;
+  text-shadow: 0 0 1px #0c0;
 }
 
 a:active {
-  text-shadow: 0 0 2px #fff;
+  text-shadow: 0 0 1px #050;
 }
 
 /* Page specific */
